// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateWebpageTree > basic path 1`] = `
{
  "a": {
    "b": {
      "c": {
        "url": "https://www.cisa.gov/a/b/c",
      },
    },
  },
}
`;

exports[`generateWebpageTree > no path 1`] = `
{
  "undefined": {
    "url": "https://www.cisa.gov/",
  },
}
`;

exports[`generateWebpageTree > single path 1`] = `
{
  "a": {
    "url": "https://www.cisa.gov/a",
  },
}
`;

exports[`generateWebpageTree > trailing slash 1`] = `
{
  "a": {
    "url": "https://www.cisa.gov/a/",
  },
}
`;
